# pm4py-rs

./: .gitignore  00_CHAOS_ENGINEERING_INDEX.md  00_LOAD_TESTING_INDEX.md  00_START_HERE.md  ACADEMIC_PUBLICATION_SUMMARY.md  ACCEPTANCE_TESTING_SUMMARY.md  ADVANCED_CONFORMANCE_FILES.md  ADVANCED_CONFORMANCE_IMPLEMENTATION.md  ADVANCED_CONFORMANCE_QUICK_REFERENCE.md  ADVANCED_CONFORMANCE_TEST_RESULTS.md  ADVANCED_DISCOVERY.md  ADVANCED_STATISTICS_API_REFERENCE.md  ADVANCED_STATISTICS_SUMMARY.md  ALGORITHM_COMPATIBILITY_MATRIX.md  ALPHA_MINER_DIFF.md  ALPHA_MINER_FIX_REPORT.md  AUDIT_SUMMARY.md  AUTHORS.md  BASELINE_MEASUREMENT_TEMPLATES.md  BENCHMARKING.md  BENCHMARKING_SUITE_SUMMARY.md  BENCHMARK_DELIVERY_SUMMARY.md  BENCHMARK_README.md  BOARD_KPIS_COMPLETION_SUMMARY.md  BUSINESSOS_CI_FIX_SUMMARY.md  CACHE_OPTIMIZATION_INDEX.md  CHANGELOG.md  CHAOS_TESTING_GUIDE.md  CHICAGO_TDD_GAP_ANALYSIS.md  CHICAGO_TDD_VERIFICATION_REPORT.md  COMMIT_REPORT.md  COMPLIANCE_REPORT.md  CONTRIBUTING.md  CORRECTNESS_VERIFICATION_SUMMARY.md  COVERAGE.md  COVERAGE_REPORT.md  CRITICAL_BUGS_FIXED.md  CRITICAL_BUGS_FOUND.md  Cargo.toml  DEFERRED_TESTS_FINAL_REPORT.md  (+105 more)
.cargo/: config.local  config.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  security.yml  test.yml
benches/: analysis.rs  businessos_gateway_perf.rs  comprehensive_conformance_bench.rs  comprehensive_statistics_bench.rs  conformance.rs  discovery.rs  discovery_bench.rs  hotspot_before_after.rs  io.rs  scale_benchmarks.rs
docker/: healthcheck.sh
docs/: ADVANCED_ANALYTICS_GUIDE.md  ADVANCED_TOPICS.md  ALGORITHM_DEEPDIVE.md  API_DOCUMENTATION_INDEX.md  API_REFERENCE.md  ARCHITECTURE.md  BASELINE_MEASUREMENT_TEMPLATES.md  BENCHMARKING_INDEX.md  BENCHMARKING_QUICK_START.md  BUILD_OPTIMIZATION.md  CHAOS_ENGINEERING_RESULTS.md  CHICAGO_TDD_VERIFICATION_COMPLETE.md  COMPLETE_GETTING_STARTED.md  COMPREHENSIVE_TROUBLESHOOTING.md  CORRECTNESS_PROOFS.md  CROSS_PROJECT_INTEGRATION_GUIDE.md  DELIVERABLES_MANIFEST.md  DEVELOPER_GUIDE.md  DISTRIBUTED_SPEEDUP_VALIDATION_REPORT.md  DOCUMENTATION_INDEX.md  ERROR_HANDLING_IMPROVEMENTS.md  EXAMPLES_INDEX.md  FAQ.md  FEATURES.md  GETTING_STARTED.md  IO_ROBUSTNESS_GUIDE.md  MEMORY_OPTIMIZATION_ARCHITECTURE.md  MEMORY_OPTIMIZATION_DELIVERABLES.md  MEMORY_OPTIMIZATION_GUIDE.md  OPENAPI_SPEC.yaml  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_EXAMPLES.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_BENCHMARKING.md  PERFORMANCE_RESULTS_TEMPLATE.md  PERFORMANCE_TUNING_GUIDE.md  PM4PY_PARITY_GAP_ANALYSIS.md  PM4PY_RUST_VERIFICATION_REPORT.md  PM4PY_TEST_INVENTORY.md  (+25 more)
docs/diataxis/: INDEX.md
examples/: EXAMPLES_SUMMARY.md  README-verification.md  README.md  http_client.js  http_client.py  http_examples.sh
examples/data/: running-example.csv
examples/disabled/: 01_simple_alpha_miner.rs  02_heuristic_with_filtering.rs  03_inductive_decomposition.rs  04_algorithm_comparison.rs  05_token_replay_basic.rs  06_statistics_analysis.rs  07_filtering_techniques.rs  08_performance_benchmarking.rs  09_end_to_end_pipeline.rs  10_variant_analysis.rs  1_alpha_miner_discovery.rs.disabled  2_heuristic_miner_filtering.rs.disabled  3_conformance_token_replay.rs.disabled  4_statistics_analysis.rs.disabled  5_end_to_end_pipeline.rs.disabled  absolute_final_verify.rs  absolutely_final_verify.rs  analysis.rs  check_all_257_pm4py_functions.rs  check_each_function.rs  complete_all_verify.rs  complete_api_verify.rs  comprehensive_all_capabilities_verify.rs  comprehensive_extra_verify.rs  comprehensive_parity_test.rs  comprehensive_parity_verification.rs  comprehensive_verify_all.rs  conform_example.rs  conformance.rs  debug_analysis.rs  discover_example.rs  discovery.rs  execute_all_62_implemented_functions.rs  exhaustive_verify.rs  final_all_255.rs  final_all_remaining_verify.rs  final_comprehensive_verify.rs  final_io_models_verify.rs  final_verify_all.rs  io.rs  (+54 more)
ggen/: ggen.toml
ggen/.ggen/: sync-state.json
ggen/ontology/: pm4py-api.ttl
ggen/output/: analysis.rs  conformance.rs  convert.rs  discovery.rs  filtering.rs.backup  helpers.rs.backup  io.rs.backup  ocpm.rs.backup  statistics.rs.backup  tests.rs.backup  utils.rs.backup
ggen/templates/: mod.rs.tera  pm4py_module.rs.tera  pm4py_ocel_tests.rs.tera  pm4py_tests.rs.tera
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  logs-pvc.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  resourcequota.yaml  service.yaml
scripts/: compare_benchmarks.py  python_benchmark.py  run_all_verifications.sh  run_benchmarks.sh
src/: board_kpis.rs  event_stream.rs  lib.rs  main.rs  parity_verification.rs  python_bridge.rs  remaining_parity.rs  tracing.rs  version.rs
src/a2a/: artifact.rs  dispatch.rs  handler.rs  mod.rs  protocol.rs  skills.rs  task.rs  task_storage.rs
src/audit/: encryption.rs  events.rs  export.rs  hash_chain.rs  mod.rs
src/boardchair/: mod.rs
src/cache/: lru.rs  lru_test.rs  mod.rs
src/conformance/: advanced.rs  alignment.rs  alignments.rs  (+13 more)
tests/: 00-START-HERE.md  BUSINESSOS_HANDLER_GUIDE.md  CORE_ALGORITHM_TEST_SUMMARY.md  DEFERRED_TESTS.md  DEFERRED_TESTS_FIX_SUMMARY.md  INTEGRATION_EXAMPLES.md  INTEGRATION_TESTING_GUIDE.md  INTEGRATION_TESTS_README.md  ORGANIZATION_SUMMARY.txt  PARITY_VALIDATION_GUIDE.md  PARITY_VALIDATION_MATRIX.md  README.md  README_STATE_BASED_PATTERNS.md  TEST_SUMMARY.md  VERIFICATION.txt  YAWL_ADVANCED_PATTERNS_SUMMARY.md  YAWL_STATE_BASED_PATTERNS_SUMMARY.md  YAWL_STATE_BASED_PATTERNS_TEST_RESULTS.md  a2a_integration_test.rs  a2a_server_test.rs  a2a_work_test.rs  advanced_conformance_test.rs  alignments_bridge_test.rs  armstrong_agi_live_validation_test.rs  board_kpis_standalone_test.rs  board_kpis_test.rs  boardchair_test.rs  businessos_http_integration_tests.py  businessos_use_case_test.rs  canopy_integration_test.rs  chaos_failure_injection.rs  conformance_spans_test.rs  connector_enterprise_test.rs  core_algorithm_equivalence_test.rs  correlation_e2e_test.rs  decision_mining_test.rs  deep_api_coverage_tests.rs  discovery_spans_test.rs  discovery_variants_test.rs  distributed_conformance_test.rs  (+70 more)
(+323 files in other folders)
