[package]
name = "pm4py-rs"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
# Minimum Supported Rust Version: 1.85.0 (required for a2a-rs edition 2024)

description = "A comprehensive Rust implementation of pm4py, providing process mining capabilities native to Rust"
authors = ["Sean Chatman <info@chatmangpt.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/seanchatmangpt/chatmangpt/tree/main/pm4py-rust"
documentation = "https://docs.rs/pm4py-rs"
homepage = "https://github.com/seanchatmangpt/chatmangpt/tree/main/pm4py-rust"
keywords = ["process-mining", "petri-nets", "event-logs", "business-process", "algorithm"]
categories = ["algorithms", "data-structures", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# XML parsing for XES format
quick-xml = { version = "0.31", features = ["serialize"] }
xml-rs = "0.8"
roxmltree = "0.19"

# CSV handling
csv = "1.3"

# Data structures & utilities
indexmap = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
rand = "0.8"

# Graph algorithms & visualization
petgraph = "0.6"
ndarray = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
env_logger = "0.11"

# OpenTelemetry
opentelemetry = { version = "0.21", features = ["trace"] }
# grpc-tonic: Weaver live-check receiver uses OTLP gRPC; http-proto kept for optional HTTP export paths.
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic", "http-proto"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "trace"] }
# HTTP header extraction for W3C TraceContext propagation (uses http 0.2 to match OTEL ecosystem)
opentelemetry-http = { version = "0.10" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Redis for idempotency cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
dashmap = "5.5"

# HTTP client for gateway
reqwest = { version = "0.11", features = ["json"] }

# A2A protocol implementation (optional feature)
# Note: git dep converted to crates.io dep on publish; version specified for crates.io compatibility
a2a-rs = { git = "https://github.com/seanchatmangpt/a2a-rs", version = "0.1", features = ["server", "tracing"], optional = true }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"], optional = true }

# Cryptography (audit hash chain + encryption)
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.21"

# Columnar format (audit export)
parquet = "50"

# SQLite (OCEL2 sqlite format)
rusqlite = { version = "0.29", features = ["bundled"] }

# Testing
proptest = "1.4"
num_cpus = "1.16"

# Python bindings — always required; pm4py is the only implementation
pyo3 = { version = "0.21", features = ["auto-initialize"] }

# Temp files for PyO3 bridge (parquet export via pandas)
tempfile = "3.8"

# MessagePack serialization (optional)
rmp-serde = { version = "1.1", optional = true }
hex = "0.4.3"
bytes = "1"

# rmcp: official Rust MCP SDK (optional, enabled by mcp-server feature)
rmcp = { version = "1.3.0", optional = true }
schemars = { version = "1", features = ["derive"], optional = true }
tokio-util = { version = "0.7", features = ["io-util"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockito = "1.4"

[features]
default = ["std", "pm4py-bridge"]
std = []
visualization = []
persistence = ["sqlx"]
msgpack = ["rmp-serde"]
all-features = ["visualization", "persistence", "msgpack", "a2a"]
# pm4py-bridge: enables PyO3 bridge paths in discovery/conformance miners.
# Always active since pm4py is the only implementation, but kept as a feature
# flag so existing cfg-gated code compiles without unexpected_cfg warnings.
pm4py-bridge = []
# integration: enables real external-service tests (Groq API, etc.)
# Run with: cargo test --features integration
integration = []
# A2A protocol: exposes all 10 process mining tools as proper A2A skills
a2a = ["dep:a2a-rs"]
# mcp-server: enables rmcp SDK transport (StreamableHttpService + stdio)
mcp-server = ["dep:rmcp", "rmcp/server", "rmcp/client", "rmcp/macros", "rmcp/transport-streamable-http-server", "rmcp/transport-io", "dep:schemars", "dep:tokio-util", "dep:tracing-subscriber"]

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.test]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 16
strip = true
# Fastest release build (sacrifice final binary size)
# For maximum binary size reduction, use codegen-units = 1

[profile.bench]
inherits = "release"
codegen-units = 16

[[bin]]
name = "mcp_stdio"
path = "src/bin/mcp_stdio.rs"
required-features = ["mcp-server"]

[[bench]]
name = "discovery"
harness = false

[[bench]]
name = "conformance"
harness = false

[[bench]]
name = "analysis"
harness = false

[[bench]]
name = "io"
harness = false

[[bench]]
name = "scale_benchmarks"
harness = false

[[bench]]
name = "comprehensive_conformance_bench"
harness = false

[[bench]]
name = "comprehensive_statistics_bench"
harness = false

[lib]
name = "pm4py"
crate-type = ["cdylib", "rlib"]
