[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[project]
name = "pm4py_rust"
version = "0.3.0"
description = "High-performance Python bindings for pm4py-rust - A Rust implementation of process mining algorithms"
readme = "README.md"
authors = [
    {name = "Sean Chatman", email = "info@chatmangpt.com"}
]
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "process-mining",
    "petri-nets",
    "event-logs",
    "business-process",
    "algorithm",
    "rust",
    "performance",
]

[project.urls]
Repository = "https://github.com/seanchatmangpt/pm4py-rust"
Documentation = "https://github.com/seanchatmangpt/pm4py-rust"
Issues = "https://github.com/seanchatmangpt/pm4py-rust/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "mypy>=0.950",
]

[tool.maturin]
features = ["python"]
